# xr-project-object-server

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docker/postgres/init/: 1-create_table.sql  2-insert_sample.sql
src/: domain.rs  lib.rs  main.ts
src/application/service/: createObjectService.ts  getObjectBySpotIdService.ts  getObjectCollectionBySpotIdsService.ts
src/config/: const.ts  env.ts
src/domain/: error.rs  model.rs
src/domain/error/: domainError.ts  object_error.rs
src/domain/model/: object.rs  object_browsing_log.rs  object_collection.rs  user.rs
src/domain/model/applicaation/: aggregate.ts
src/domain/model/object/: aggregate.rs  aggregate.ts  extension.ts  objectId.ts  object_aggregate_id.rs  preSignedUrl.ts  signedUrl.ts  signed_url.rs  spotId.ts  spot_id.rs
src/domain/repository_impl/: objectBrowsingLogIdRepositoryImpl.ts  objectCollectionRepositoryImpl.ts  objectRepositoryImpl.ts
src/infrastructure/: connection.ts
src/infrastructure/error/: infrastructureError.ts
src/infrastructure/gateway/: objectBrowsingLogGateway.ts  objectGateway.ts  preSignedUrlGateway.ts
src/infrastructure/record/: objectCollectionRecord.ts  objectRecord.ts  preSignedUrlRecord.ts
src/infrastructure/repository/: objectBrowsingLogRepository.ts  objectCollectionRepository.ts  objectRepository.ts
src/presentation/handler/: createObjectHandler.ts  getObjectBySpotIdHandler.ts  getObjectCollectionBySpotIdsHandler.ts
src/presentation/middleware/: applicationMiddleware.ts
src/utils/: globalVariable.ts
(+14 files in other folders)
