[package]
name = "xr-project-object-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
serde = { version = "1.0.152", features = ["derive"] }
ulid = "1.1.2"
url = "2.5.0"
thiserror= "1.0"
anyhow = "1.0"